# myaiproject

./: .gitignore  CLAUDE.md  pyproject.toml  render.yaml  requirements.txt
examples/: basic_scrape.py
src/myaiproject/: __init__.py  __main__.py  cli.py  config.py  webapp.py
src/myaiproject/scraper/: engine.py  exporter.py  fetcher.py  parser.py  pipeline.py  summarizer.py
src/myaiproject/utils/: url_utils.py
tests/: conftest.py  test_engine.py  test_fetcher.py  test_parser.py  test_pipeline.py  test_summarizer.py  test_webapp.py
